force-app/main/default/objects/HeapUsageLog__c/HeapUsageLog__c.object-meta.xml
<CustomObject>
    <label>ヒープ使用率ログ</label>
    <nameField>
        <label>ヒープ使用率ログ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>