force-app/main/default/objects/HeapUsageLog__c/fields/ChunkSize__c.field-meta.xml
<CustomField>
    <fullName>ChunkSize__c</fullName>
    <description>Queueableあたり処理件数</description>
    <label>チャンクサイズ</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>