force-app/main/default/objects/HeapUsageLog__c/fields/ExecutedAt__c.field-meta.xml
<CustomField>
    <fullName>ExecutedAt__c</fullName>
    <label>実行日時</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>