force-app/main/default/objects/HeapUsageLog__c/fields/HeapLimitKB__c.field-meta.xml
<CustomField>
    <fullName>HeapLimitKB__c</fullName>
    <description>getLimitHeapSize() 値</description>
    <label>ヒープ上限（KB）</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>