force-app/main/default/objects/HeapUsageLog__c/fields/HeapUsedKB__c.field-meta.xml
<CustomField>
    <fullName>HeapUsedKB__c</fullName>
    <description>実使用ヒープ（getHeapSize()）</description>
    <label>ヒープ使用量（KB）</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>