force-app/main/default/objects/HeapUsageLog__c/fields/RecordCount__c.field-meta.xml
<CustomField>
    <fullName>RecordCount__c</fullName>
    <description>処理対象件数（測定時）</description>
    <label>対象件数</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>