force-app/main/default/objects/HeapUsageLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ChunkSize__c</columns>
    <columns>HeapUsedKB__c</columns>
    <columns>HeapLimitKB__c</columns>
    <columns>Memo__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>